--- a/css/media.css
+++ b/css/media.css
@@ -1165,6 +1165,9 @@
         padding: 0;
         gap: 20px;
     }
+    .contacts-modal__inner .contacts-form-img {
+        max-width: none;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1241,8 +1244,19 @@
     .contacts-social__left p {
         margin-top: 15px;
     }
-    .contacts-social__right {
+    .contacts-social__right,
+    .contacts-form__inner {
         max-width: none;
+    }
+    .contacts-modal__inner .contacts-form-img {
+        display: none;
+    }
+    .contacts-modal__inner {
+        text-align: center;
+        min-width: auto;
+    }
+    .contacts-form-connect {
+        justify-content: center;
     }
 }
 
@@ -1632,6 +1646,13 @@
     }
     .order-apply__text {
         margin-top: 15px;
+    }
+    .contacts-form h3 {
+        font-size: 18px;
+    }
+    .contacts-form-subtext,
+    .contacts-form-question {
+        margin-top: 10px;
     }
 }
 
@@ -2320,7 +2341,8 @@
         font-size: 12px;
     }
 
-    .question-form .close-btn {
+    .question-form .close-btn,
+    .modal.contact-form .close-btn {
         width: 16px;
         height: 16px;
         right: 16px;
@@ -2481,6 +2503,28 @@
     }
     .contacts-city__departments-inner {
         margin-top: 10px;
+    }
+    .contacts-form h3 {
+        font-size: 16px;
+    }
+    .contacts-form-subtext,
+    .contacts-form-term {
+        font-size: 12px;
+    }
+    .contacts-form-question {
+        font-size: 10px;
+    }
+    .contacts-form input[type=number],
+    .contacts-form input[type=number]::placeholder,
+    .contacts-form__inner textarea,
+    .contacts-form__inner textarea::placeholder {
+        font-size: 12px;
+    }
+    .contacts-form-confidence p {
+        text-align: left;
+    }
+    .contacts-modal__inner {
+        padding: 45px 20px;
     }
 }
 
@@ -2671,7 +2715,8 @@
         font-size: 16px;
     }
 
-    .question-form .close-btn {
+    .question-form .close-btn,
+    .modal.contact-form .close-btn {
         width: 10px;
         height: 10px;
         top: 10px;
@@ -2756,6 +2801,25 @@
     }
     .contacts-city__maps {
         height: 350px;
+    }
+    .contacts-modal__inner {
+        padding: 20px;
+    }
+    .contacts-form-connect {
+        justify-content: space-between;
+        gap: normal;
+    }
+    .contacts-form-connect__label {
+        padding: 20px 25px;
+    }
+    .contacts-form input[type=number],
+    .contacts-form__inner textarea,
+    .contacts-form-confidence,
+    .rect-btn--contacts-form {
+        margin-top: 10px;
+    }
+    .contacts-form-label-file p {
+        font-size: 10px;
     }
 }
 
