--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url('./swiper.min.css');
 @import url('./splide.min.css');
 @import url('./itc-custom-select.css');
+@import url('./toast.min.css');
 @import url('./font.css');
 @import url('./global.css');
 @import url('./category.css');
