--- a/css/favorites.css
+++ b/css/favorites.css
@@ -22,7 +22,7 @@
 }
 
 .products__main.favorite.tiles,
-.action .products__main.tiles {
+.products__main.action.tiles {
     grid-template-columns: repeat(auto-fit, minmax(calc(270px - 15px), 1fr));
     justify-content: space-between;
 }
