--- a/css/compare.css
+++ b/css/compare.css
@@ -90,6 +90,7 @@
 .compare__products-property-value {
     font-weight: 500;
     font-size: 16px;
+    height: 1.5em;
 }
 
 .compare__empty-product {
