--- a/css/style.css
+++ b/css/style.css
@@ -859,18 +859,24 @@ body.active {
     text-transform: uppercase;
 }
 
+.round-btn--header.auth-btn:hover ~ .auth-popup,
+.auth-popup:hover {
+    display: block;
+}
+
 .auth-popup {
     display: none;
     position: absolute;
     background-color: #fff;
-    padding: 20px 25px;
     border-radius: 10px;
     right: 0;
     width: 305px;
+    top: calc(100% - 5px);
+    z-index: 3;
 }
 
-.auth-popup.active {
-    display: block;
+.auth-popup__inner {
+    padding: 20px 25px;
 }
 
 .auth-popup__title {
@@ -879,7 +885,7 @@ body.active {
     font-weight: 500;
 }
 
-.auth-popup p {
+.auth-popup .auth-popup__inner--not-logged p {
     margin-top: 10px;
     color: var(--text-grey-color);
 }
@@ -889,6 +895,8 @@ body.active {
     padding: 9px 0;
     max-width: 255px;
     width: 100%;
+    display: block;
+    text-align: center;
 }
 
 .rect-btn--login {
@@ -909,6 +917,98 @@ body.active {
     border-width: 0 8px 8px 8px;
     border-style: solid;
     border-color: #fff transparent;
+}
+
+.auth-popup__user {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.auth-popup__user-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 58px;
+    height: 58px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    background-color: #d9d9d9;
+}
+
+.auth-popup__user-img::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .2);
+    opacity: 0;
+    transition: var(--default-transition);
+}
+
+.auth-popup__user-img:hover::after {
+    opacity: 1;
+}
+
+.auth-popup__user-img img {
+    object-fit: cover;
+    width: 100%;
+}
+
+.auth-popup__user-img img[src="./img/icons/user.svg"] {
+    max-width: 36px;
+}
+
+.auth-popup__user-name {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.auth-popup__user-name ~ p {
+    font-size: 12px;
+    color: #8c8c8c;
+}
+
+.auth-popup__links {
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.rect-btn--logged {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    padding: 9px 22px;
+}
+.rect-btn--logged img {
+    position: absolute;
+    left: 22px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 15px;
+    height: 15px;
+}
+.auth-popup__discount {
+    margin-top: 30px;
+    text-align: center;
+}
+.auth-popup__discount-value {
+    font-weight: 500;
+    font-size: 16px;
+}
+.auth-popup__discount-link {
+    color:var(--main-blue);
+    font-size: 12px;
+}
+.rect-btn--exit {
+    margin-top: 16px;
+    width: 100%;
+    padding: 8px;
 }
 
 .header__mobile {
@@ -1936,6 +2036,20 @@ body.active {
     top: 225px;
 }
 
+.product-card-mini {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    border-radius: 10px;
+    overflow: hidden;
+    max-width: 100px;
+    height: 100px;
+}
+
+.product-card-mini img {
+    width: 100%;
+}
+
 /* BESTSELLER END */
 
 /* SHOWROOM START */
@@ -2694,6 +2808,14 @@ a.footer__nav-link--show {
     justify-content: center;
 }
 
+.mobile-product-info .product-box__brand-link {
+    max-width: 50%;
+}
+
+.mobile-product-info .product-box__brand-link img {
+    width: 100%;
+}
+
 .product-box__brand-link {
     display: block;
 }
@@ -2771,13 +2893,15 @@ a.footer__nav-link--show {
 }
 
 .product-box__item--terms {
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
     background-color: transparent;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px;
 }
 
 .product-box__guarantee {
+    display: grid;
     background-color: #fff;
     border-radius: 10px;
     padding: 13px 24px;
@@ -2787,10 +2911,6 @@ a.footer__nav-link--show {
     display: flex;
     gap: 10px;
     align-items: center;
-}
-
-.product-box__guarantee-item:last-child {
-    margin-top: 10px;
 }
 
 .product-box__guarantee-text {
@@ -2807,6 +2927,7 @@ a.footer__nav-link--show {
 }
 
 .product-box__colors {
+    display: grid;
     padding: 18px 22px;
     background-color: #fff;
     border-radius: 10px;
@@ -3021,6 +3142,21 @@ a.footer__nav-link--show {
     flex-direction: column;
 }
 
+.question-form__success {
+    display: none;
+}
+
+.question-form__success .question-form__title {
+    max-width: none;
+}
+
+.question-form__success .rect-btn--question-form-success {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
+}
+
 .question-form__title {
     font-size: 42px;
     font-weight: 500;
@@ -3136,73 +3272,6 @@ a.footer__nav-link--show {
 
 /* QUESTION FORM END */
 
-/* POPUP START*/
-
-#popupStatus {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    z-index: 10;
-    box-shadow: 0px 4px 30px rgba(25, 33, 79, 0.25);
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-#popupStatus.active {
-    animation: popupHide 3s;
-}
-
-.popup {
-    background-color: #fff;
-    padding: 25px 50px 25px 25px;
-    position: relative;
-}
-
-.popup-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    max-width: 200px;
-}
-
-.popup-link {
-    display: block;
-    margin-top: 30px;
-    font-size: 14px;
-    line-height: 1.5;
-    font-weight: 500;
-    color: var(--main-blue);
-}
-
-.popup-link svg {
-    margin-left: 8px;
-}
-
-.popup-link svg path {
-    fill: var(--main-blue);
-}
-
-.close-btn--popup {
-    width: 10px;
-    height: 10px;
-    top: 10px;
-    right: 10px;
-}
-
-@keyframes popupHide {
-    0% {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    100% {
-        opacity: 0;
-        visibility: hidden;
-    }
-}
-
-/* POPUP END*/
-
 /* CITY-SELECT START */
 
 .city-select {
@@ -3274,6 +3343,10 @@ a.footer__nav-link--show {
 /* CITY-SELECT END */
 
 /* AUTH REGISTER START */
+
+.auth__inner {
+    display: flex;
+}
 
 .auth__box {
     background-color: #fff;
@@ -3376,11 +3449,12 @@ form.auth__form {
 .rect-btn--auth-register,
 .rect-btn--auth-login {
     width: 100%;
-    padding: 5px;
+    padding: 10px;
 }
 
 .rect-btn--auth-register {
     margin-top: 25px;
+    text-align: center;
 }
 
 .auth__footer {
@@ -3409,7 +3483,6 @@ form.auth__form {
     height: 30px;
 }
 
-.auth__title--verify,
 .auth__title--recover {
     margin-top: 20px;
 }
@@ -3444,7 +3517,6 @@ form.auth__form {
     color: var(--main-blue);
     font-size: 12px;
     line-height: 1.5;
-    margin-top: 15px;
 }
 
 /* AUTH LOGIN END */
