--- a/css/media.css
+++ b/css/media.css
@@ -429,6 +429,10 @@
     .contacts-social__inner {
         padding: 0 55px;
     }
+    .product-box .product-card__counter .minus,
+    .product-box .product-card__counter .plus {
+        padding: 0 20px 0 20px;
+    }
 }
 
 @media (max-width: 1024px) {}
@@ -1167,6 +1171,259 @@
     }
     .contacts-modal__inner .contacts-form-img {
         max-width: none;
+    }
+    .header__mobile-inner.header__mobile-inner--auth {
+        justify-content: flex-start;
+        text-align: center;
+    }
+    
+    .header__mobile-auth-return {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .header__mobile-auth-return img {
+        width: 20px;
+    }
+    
+    .header__mobile-title {
+        width: 100%;
+        font-size: 16px;
+        font-weight: 500;
+        color: #fff;
+        text-align: center;
+    }
+    
+    .auth {
+        padding: 30px 0;
+    }
+    
+    .auth .container {
+        padding: 0 20px;
+    }
+    
+    .auth-title {
+        font-size: 16px;
+        font-weight: 500;
+    }
+    
+    .swiper-auth-slide {
+        padding: 20px 40px;
+        background-color: #fff;
+        border-radius: 10px;
+    }
+    
+    .auth-text {
+        color: var(--text-grey-color);
+    }
+    
+    .auth-start .auth-text {
+        margin-top: 7px;
+    }
+    
+    .auth-box.auth-start .rect-btn--auth,
+    .auth-box.auth-welcome .rect-btn--auth,
+    .auth-box.auth-password-success .rect-btn--auth {
+        width: 100%;
+    }
+
+    .auth-form {
+        max-width: none;
+    }
+    
+    .rect-btn--auth.transparent {
+        margin-top: 10px;
+    }
+    
+    .auth-tools {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 15px;
+    }
+    
+    .auth-remember {
+        position: relative;
+    }
+    
+    .swiper-auth input[type=checkbox] {
+        opacity: 0;
+        z-index: -1;
+        position: absolute;
+    }
+    
+    .auth-remember label {
+        font-size: 12px;
+        color: var(--text-grey-color);
+        padding-left: 35px;
+    }
+    
+    .auth-remember__slider {
+        position: absolute;
+        width: 30px;
+        height: 16px;
+        background-color: #d9d9d9;
+        border-radius: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        transition: .2s;
+    }
+    
+    .auth-remember__slider-circle {
+        position: absolute;
+        top: 50%;
+        transform: translate(10%, -50%);
+        width: 13px;
+        height: 13px;
+        background-color: #fff;
+        box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .25);
+        border-radius: 50%;
+        transition: .2s;
+    }
+    
+    .auth-remember input:checked ~ .auth-remember__slider {
+        background-color: var(--main-blue);
+    }
+    
+    .auth-remember input:checked ~ .auth-remember__slider .auth-remember__slider-circle {
+        transform: translate(120%, -50%);
+    }
+    
+    .auth-tools button {
+        color: var(--main-blue);
+        font-size: 12px;
+    }
+    
+    .auth-form {
+        margin-top: 12px;
+    }
+    
+    .auth-form__label {
+        font-size: 12px;
+        display: block;
+        position: relative;
+    }
+    
+    .auth-form__label--checkbox {
+        display: flex;
+    }
+    
+    .auth-form__label--checkbox p {
+        position: relative;
+        padding-left: 30px;
+        color: var(--text-grey-color);
+        max-width: 230px;
+    }
+    
+    .auth-form__label--checkbox p::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border: 1px solid var(--subtitle-color);
+        border-radius: 2px;
+        background-color: #fff;
+    }
+    
+    .auth-form__label--checkbox p::after {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 2px;
+        content: '';
+        width: 11px;
+        height: 9px;
+        background: url(../img/icons/check.svg) center center / cover no-repeat;
+        transition: var(--alt-transition);
+        opacity: 0;
+    }
+    
+    .auth-form__label--checkbox input:checked + p::after {
+        opacity: 1;
+    }
+    
+    .auth-form__label .auth-form__show-password {
+        position: absolute;
+        background-color: var(--main-blue);
+        width: 30px;
+        height: 39px;
+        bottom: 0;
+        right: 0;
+        border-radius: 0 10px 10px 0;
+        background-image: url('../img/icons/auth-form/close-eye.svg');
+        background-size: 15px;
+        background-position: center;
+        background-repeat: no-repeat;
+        transition: background-img 0s;
+    }
+    
+    .auth-form__label .auth-form__show-password.active {
+        background-image: url('../img/icons/auth-form/open-eye.svg');
+    }
+    
+    .auth-form__label input:not([type=checkbox]) {
+        width: 100%;
+        border: 1px solid var(--main-blue);
+        padding: 10px 15px 10px 45px;
+        font-size: 14px;
+        background-size: 15px;
+        background-repeat: no-repeat;
+        background-position: 10px;
+        margin-top: 5px;
+    }
+    
+    .auth-form__label:not(:first-child) {
+        margin-top: 10px;
+    }
+    
+    .auth-form__label input::placeholder {
+        font-size: 14px;
+    }
+    
+    .auth-form__label input[type=email] {
+        background-image: url('../img/icons/auth-form/email.svg');
+    }
+    
+    .auth-form__label input[type=password],
+    .auth-form__label input.password-input {
+        background-image: url('../img/icons/auth-form/lock.svg');
+    }
+    
+    .auth-form__label input[type=text]:not(.password-input) {
+        background-image: url('../img/icons/auth-form/user.svg');
+    }
+    
+    .auth-form__label input[type=number]:not(.auth-verify-input) {
+        background-image: url('../img/icons/auth-form/phone.svg');
+    }
+    
+    p.check-acc {
+        display: flex;
+        justify-content: center;
+        gap: 5px;
+        margin-top: 8px;
+        color: #8c8c8c;
+    }
+    
+    p.check-acc button {
+        color: var(--main-blue);
+    }
+    
+    p.auth-form__label-subtext {
+        color: var(--text-grey-color);
+        font-size: 12px;
+        margin-top: 10px;
+    }
+    
+    .auth-form__label input[type=number].auth-verify-input {
+        text-align: center;
+        padding: 10px 15px;
     }
 }
 
@@ -2331,6 +2588,16 @@
         padding: 5px;
     }
 
+    .mobile-product-info .round-btn {
+        width: 35px;
+        height: 35px;
+    }
+
+    .mobile-product-info .round-btn svg {
+        width: 15px;
+        height: 15px;
+    }
+
     .round-btn--fav svg,
     .round-btn--compare svg,
     .round-btn--cart svg {
@@ -2530,6 +2797,13 @@
     }
     .contacts-modal__inner {
         padding: 45px 20px;
+    }
+    .mobile-product-info .product-box__buy-buttons {
+        width: 100%;
+    }
+    .mobile-product-info .product-card__counter .plus,
+    .mobile-product-info .product-card__counter .minus {
+        padding: 10px 50px 10px 50px;
     }
 }
 
@@ -2824,6 +3098,19 @@
         margin-top: 10px;
     }
     .contacts-form-label-file p {
+        font-size: 10px;
+    }
+    .auth-tools {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+    p.check-acc {
+        justify-content: space-between;
+        align-items: baseline;
+    }
+    p.check-acc,
+    p.check-acc .auth-check-btn--register {
         font-size: 10px;
     }
 }
