--- a/css/product.css
+++ b/css/product.css
@@ -6,8 +6,14 @@
 
 .product .label-container {
     z-index: 10;
-    width: 100%;
     display: flex;
+    flex-direction: row;
+    gap: 5px;
+    padding-left: 60px;
+}
+
+.product .label-container .label + .label {
+    margin-top: 0;
 }
 
 .product .label-container .label.special {
@@ -22,12 +28,16 @@
     order: -1;
     margin-bottom: 10px;
     margin-top: 0;
+    position: absolute;
+    transition: var(--default-transition);
 }
 
 .product .label-container .label.special:hover {
     clip-path: polygon(0 0, 100% 0, 90% 50%, 100% 100%, 0 100%);
-    padding-right: 40px;
     color: #fff;
+    min-width: 300px;
+    max-width: 500px;
+    width: 100%;
 }
 
 .product .label-container .label.special:hover p {
@@ -36,6 +46,62 @@
 
 .product .label-container .label.special p {
     display: none;
+}
+
+.product-box__tools-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.product-box .product-card__counter.hide,
+.mobile-product-info .product-card__counter.hide {
+    display: none;
+}
+
+.product-box .product-card__counter,
+.mobile-product-info .product-card__counter {
+    height: 100%;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.product-box .product-card__counter .plus,
+.mobile-product-info .product-card__counter .plus {
+    padding: 0 30px 0 30px;
+}
+
+.product-box .product-card__counter .minus,
+.mobile-product-info .product-card__counter .minus {
+    padding: 0 30px 0 30px;
+}
+
+.product-box .product-box__buy-buttons {
+    width: 50%;
+}
+
+.product-box .product-box__buy-buttons .rect-btn--add-to-cart,
+.mobile-product-info .product-box__buy-buttons .rect-btn--add-to-cart {
+    width: 100%;
+}
+
+.mobile-product-info .product-box__buy-buttons {
+    width: 50%;
+}
+
+.product-box .product-box__buy-buttons .rect-btn--add-to-cart.hide,
+.mobile-product-info .product-box__buy-buttons .rect-btn--add-to-cart.hide {
+    display: none;
+}
+
+.product-box .round-btn.active,
+.mobile-product-info .round-btn.active {
+    background-color: var(--main-blue);
+}
+
+.product-box .round-btn.active path,
+.mobile-product-info .round-btn.active path {
+    stroke: #fff;
 }
 
 /* PRODUCT END */
@@ -390,12 +456,8 @@
     padding: 0;
     background-color: #fff;
     border-radius: 10px;
-    padding: 15px 50px 15px 15px;
+    padding: 15px;
     align-items: flex-start;
-}
-
-.mobile-product__price .round-btn--fav {
-    margin-top: 15px;
 }
 
 .mobile-product__price .product-box__price-buttons {
