--- a/css/global.css
+++ b/css/global.css
@@ -821,7 +821,7 @@ select::-ms-expand {
     background-color: var(--search-color);
     right: 0;
     top: 0;
-    width: 140px;
+    width: 200px;
     transform: scale(0);
     transform-origin: 100% 0;
     transition: var(--default-transition);
@@ -841,7 +841,8 @@ select::-ms-expand {
 .header__mobile-more-dropdown ul button {
     color: #fff;
     text-align: left;
-    font-size: 10px;
+    font-size: 14px;
+    width: 100%;
 }
 
 .toast {
