--- a/css/media.css
+++ b/css/media.css
@@ -438,6 +438,9 @@
 @media (max-width: 1024px) {}
 
 @media (max-width: 992px) {
+    .aside__inner .aside__inner-close-btn {
+        display: flex;
+    }
     .fast-view-btn {
         display: none;
     }
@@ -2374,12 +2377,13 @@
     }
 
     .tags__item {
-        padding: 3px 9px;
+        padding: 0;
         height: auto;
     }
 
     .tags__item a {
         font-size: 12px;
+        padding: 5px 7px;
     }
 
     .counter {
