--- a/css/global.css
+++ b/css/global.css
@@ -477,21 +477,21 @@ select::-ms-expand {
     bottom: 0;
     right: 0;
     left: 0;
-    height: 75px;
     z-index: 100;
     display: none;
     justify-content: center;
+    padding: 17px 15px 11px 15px;
 }
 
 .mobile-bottom-menu__inner {
     display: flex;
-    width: 350px;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 350px;
 }
 
 .mobile-bottom-menu__item {
     position: relative;
-    width: 70px;
-    height: 70px;
     z-index: 1;
 }
 
@@ -501,6 +501,7 @@ select::-ms-expand {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 6px;
     width: 100%;
     text-align: center;
     font-weight: 500;
@@ -508,9 +509,19 @@ select::-ms-expand {
 }
 
 .mobile-bottom-menu__item svg {
-    width: 25px;
-    height: 25px;
+    width: 18px;
+    height: 18px;
     transition: var(--alt-transition);
+}
+
+.mobile-bottom-menu__item a span {
+    color: #fff;
+    font-size: 10px;
+    font-weight: 500;
+}
+
+.mobile-bottom-menu__item.active a span {
+    color: var(--main-blue);
 }
 
 .mobile-bottom-menu__item.active:first-child a svg path {
@@ -914,4 +925,8 @@ select::-ms-expand {
 
 .round-btn--go-to-top svg path {
     transition: var(--default-transition);
+}
+
+.aside__inner .aside__inner-close-btn {
+    display: none;
 }
